files/cluster-monitoring-master/manifests/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.lokalvert.tech
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
