files/cluster-monitoring-master/manifests/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus.lokalvert.tech
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
